force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__BaseProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated base product</description>
    <label>Base Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Search Attribute Values</relationshipLabel>
    <relationshipName>SearchAttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>