force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndDate__c</fullName>
    <description>The default end date for a line item</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>