force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__Family__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Family__c</fullName>
    <description>Search field to search by product family</description>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>