force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__InterviewName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InterviewName__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <description>The name of the associated guided interview which uses the search attribute values (or answers) to build the search filter.</description>
    <label>Interview Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>