force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCode__c</fullName>
    <description>Search fiield for Product Code</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>