force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__ResetFromGlobal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ResetFromGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to reset from global before using the search values. This flag is set to true when global values are modified. It is set to false when global values are set into the record.</description>
    <label>Reset From Global</label>
    <type>Checkbox</type>
</CustomField>