force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartDate__c</fullName>
    <description>The default start date for a line item</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>