force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValueType__c</fullName>
    <description>Specifies the search context.</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>